--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,14 @@ spring.application.name=ProyectoWebyPatrones
 server.port=9090
 
 #MySql conexion
-spring.datasource.url=jdbc:mysql://localhost:3306/
-spring.datasource.username=
-spring.datasource.password=
+spring.datasource.url=jdbc:mysql://localhost:3306/calificador
+spring.datasource.username=usuario_admin
+spring.datasource.password=Usuario_Admin
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+
+
+# para deshabilitar el caché de thymeleaf en desarrollo
+spring.thymeleaf.cache=false
+spring.thymeleaf.prefix=classpath:/templates/
+logging.level.org.springframework.web=DEBUG
