--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,4 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.thymeleaf.cache=false
 spring.thymeleaf.prefix=classpath:/templates/
 logging.level.org.springframework.web=DEBUG
+logging.level.com.proyecto.controller=DEBUG
