Se corrige bug enm agregar estudiante, se agrega roll de usaurio y seguridad en memoria

--- a/pom.xml
+++ b/pom.xml
@@ -99,7 +99,21 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+        
+        <!-- Permite ocultar moduilos-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
+        
+        <!-- Modulo de seguridad -->
+        <dependency>
+            <groupId>org.thymeleaf.extras</groupId>
+            <artifactId>thymeleaf-extras-springsecurity6</artifactId>
+        </dependency>
     </dependencies>
+    
+    
 
     <build>
         <plugins>
