Se corrige bug en agregar estudiante, modificar, se agrega roll de usaurio y seguridad en memoria Se agregan curos, peridos y matricula al agregar un estudiantes y se asigno roll de profesor al usuario cuando se suscribe.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,18 @@
 spring.application.name=ProyectoWebyPatrones
 server.port=9090
 
-#MySql conexion
-spring.datasource.url=jdbc:mysql://localhost:3306/calificador
+# MySql conexión
+spring.datasource.url=jdbc:mysql://localhost:3306/calificadorv2
 spring.datasource.username=usuario_admin
 spring.datasource.password=Usuario_Admin
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
+# Configuración de JPA y Hibernate
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.show-sql=true
 
-# para deshabilitar el caché de thymeleaf en desarrollo
+# Configuración de Thymeleaf
 spring.thymeleaf.cache=false
 spring.thymeleaf.prefix=classpath:/templates/
 logging.level.org.springframework.web=DEBUG
