Se agrega el registro de profesor con roll de TEACH y el logueo con el Roll

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,4 @@ spring.thymeleaf.cache=false
 spring.thymeleaf.prefix=classpath:/templates/
 logging.level.org.springframework.web=DEBUG
 logging.level.com.proyecto.controller=DEBUG
+logging.level.org.springframework.security=DEBUG
