Se agrega registro con activación por correo y encriptado de contraseña

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,15 @@ spring.thymeleaf.prefix=classpath:/templates/
 logging.level.org.springframework.web=DEBUG
 logging.level.com.proyecto.controller=DEBUG
 logging.level.org.springframework.security=DEBUG
+
+#Definiendo información para utilizar cuenta de Correo para usuarios
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=andrm.2012@gmail.com
+spring.mail.password=xngkohsjcyvrujes
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+#nombre del servidor para enviar el correo
+servidor.http=http://localhost
+# Se debe colocar el puerto de local host http://localhost/80
