--- a/pom.xml
+++ b/pom.xml
@@ -124,6 +124,12 @@
             <artifactId>spring-boot-starter-mail</artifactId>
         </dependency>
         
+        <dependency>
+            <groupId>com.sun.mail</groupId>
+            <artifactId>jakarta.mail</artifactId>
+            <version>2.0.1</version> <!-- O la versión más reciente -->
+        </dependency>
+        
     </dependencies>
     
     
