Cambios calificaciones y asistencias

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,6 +15,7 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 # Configuración de Thymeleaf
 spring.thymeleaf.cache=false
 spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
 logging.level.org.springframework.web=DEBUG
 logging.level.com.proyecto.controller=DEBUG
 logging.level.org.springframework.security=DEBUG
